fixing loader issues on safari

--- a/client/components/basic/Loader/style.css
+++ b/client/components/basic/Loader/style.css
@@ -12,7 +12,7 @@
     transform: rotate(0deg);
   }
   40% {
-    transform: rotate(180deg);
+    transform: rotate(360deg);
   }
   100% {
     transform: rotate3d(60, 5, 5, 120deg) translateZ(-1em) skew(10deg, -10deg);
@@ -20,11 +20,11 @@
 }
 
 .container{
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  align-content: center;
+  align-content: center; */
 }
 .container li{
   animation: rotating 2s linear infinite;
